--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "^2.5.4",
     "firebase": "^6.0.4",
     "hammerjs": "^2.0.8",
+    "ngx-auth-firebaseui": "^2.6.0",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
